Resolved sonarqube issues